--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,37 @@ html {
     padding: 20px;
 }
 
+form {
+    padding-top: 20px;
+    width: 50%;
+    display: inline-grid;
+}
+
+input[type="text"],
+select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    width: 100%;
+    background-color: #9f1f35;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #611c3f;
+    font-family: 'Montserrat', sans-serif;
+}
